<!--
  Copyright (c) 2012 Jason Reddekopp, Andrew McCann, Daniel Sopel, David Yu.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Jason Reddekopp, Andrew McCann, Daniel Sopel, David Yu - initial API and                              
      implementation
-->
<resources>

    <string name="app_name">Crowd Source</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Audio">Audio</string>
    <string name="Text">Text</string>
    <string name="Photo">Photo</string>
    <string name="desc">Task type</string>
    <string name="p_desc">Task type</string> 
    <string name="Post">Post</string> 
    <string name="t_response_prompt">Enter your response here..</string> 
    <string name="annotation_prompt">Give an annotation for your photo..</string> 

    <string-array name="taskview_options">
        <item>My Tasks</item>
        <item>My Shared</item>
        <item>Unanswered</item>
        <item>Other User\'s Tasks</item>
        <item>Random Tasks</item> 
        <item>Popular</item> 
    </string-array>

</resources>
